# bun-bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  bun-bench.txt  package.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
bunbench/: __init__.py  __main__.py  cli.py
bunbench/collect/: __init__.py  build_dataset.py
bunbench/harness/: __init__.py  constants.py  docker_build.py  docker_utils.py  grading.py  log_parser.py  reporting.py  run_evaluation.py
bunbench/inference/: __init__.py  prompts.py  run_api.py  utils.py
dataset/: tasks.json
docker/: Dockerfile.base  Dockerfile.env  Dockerfile.instance
docs/: evaluation.md  index.md  quickstart.md
examples/: run_simple_eval.py
scripts/: run_evaluation.sh
tests/: __init__.py  conftest.py  test_harness.py
tests/test_data/: sample_bun_output.txt
vllmsetup/: VLLM_SETUP.md  run_bunbench_eval.sh  run_bunbench_vllm.sh  start_vllm_server.sh  test_vllm_server.sh  vllm_config.sh  vllm_requirements.txt
