[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bun-bench"
version = "0.1.0"
description = "A benchmark suite for evaluating AI code generation on Bun runtime tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bun-Bench Team"}
]
keywords = ["benchmark", "bun", "javascript", "typescript", "ai", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "docker>=7.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "datasets>=2.14.0",
    "GitPython>=3.1.40",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = [
    "bun-bench[inference,dev]",
]

[project.scripts]
bun-bench = "bunbench.cli:main"

[project.urls]
Homepage = "https://github.com/bun-bench/bun-bench"
Documentation = "https://github.com/bun-bench/bun-bench#readme"
Repository = "https://github.com/bun-bench/bun-bench"
Issues = "https://github.com/bun-bench/bun-bench/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bunbench*"]

[tool.setuptools.package-data]
bunbench = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
